--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "server": "node index.js"
+    "build": "npx tsc",
+    "dev": "nodemon dist/index.js",
+    "server": "node dist/index.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
@@ -16,6 +17,14 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "pptxgenjs": "^3.12.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.10.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   },
   "author": "",
   "license": "ISC"
